salesforce-main/src/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Used for SIS Integrations.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appilcations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>