salesforce-main/src/main/default/objects/Application__c/fields/BNR_Admissions_FULL_PART_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Admissions_FULL_PART_Code__c</fullName>
    <label>Admissions FULL_PART Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>