salesforce-main/src/main/default/objects/Application__c/fields/BNR_Admissions_RESD_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Admissions_RESD_Code__c</fullName>
    <label>Admissions RESD Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>