salesforce-main/src/main/default/objects/Application__c/fields/BNR_Application_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Application_Status_Code__c</fullName>
    <label>Application Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>