salesforce-main/src/main/default/objects/Application__c/fields/BNR_Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>BNR_Checklist_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Complete</label>
    <type>Checkbox</type>
</CustomField>