salesforce-main/src/main/default/objects/Application__c/fields/BNR_Completed_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>BNR_Completed_Checklist_Items__c</fullName>
    <label>Completed Checklist Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>