salesforce-main/src/main/default/objects/Application__c/fields/BNR_Curriculum_Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Curriculum_Campus_Code__c</fullName>
    <label>Curriculum Campus Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>