salesforce-main/src/main/default/objects/Application__c/fields/BNR_Curriculum_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BNR_Curriculum_End_Date__c</fullName>
    <label>Curriculum End Date</label>
    <type>Date</type>
</CustomField>