salesforce-main/src/main/default/objects/Application__c/fields/BNR_Curriculum_SiteCode__c.field-meta.xml
<CustomField>
    <fullName>BNR_Curriculum_SiteCode__c</fullName>
    <label>Curriculum SiteCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>