salesforce-main/src/main/default/objects/Application__c/fields/BNR_Curriculum_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BNR_Curriculum_Start_Date__c</fullName>
    <label>Curriculum Start Date</label>
    <type>Date</type>
</CustomField>