salesforce-main/src/main/default/objects/Application__c/fields/BNR_Curriculum_Student_TypeCode__c.field-meta.xml
<CustomField>
    <fullName>BNR_Curriculum_Student_TypeCode__c</fullName>
    <label>Curriculum Student TypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>