salesforce-main/src/main/default/objects/Application__c/fields/BNR_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Department_Code__c</fullName>
    <label>Department Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>