salesforce-main/src/main/default/objects/Application__c/fields/BNR_Disability_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Disability_Status_Code__c</fullName>
    <description>Added for SIS Integration.</description>
    <label>Disability Status Code</label>
    <type>TextArea</type>
</CustomField>