salesforce-main/src/main/default/objects/Application__c/fields/BNR_Disability_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Disability_Type_Code__c</fullName>
    <label>Disability Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>