salesforce-main/src/main/default/objects/Application__c/fields/BNR_FieldOfStudy_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_FieldOfStudy_Code__c</fullName>
    <label>FieldOfStudy Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>