salesforce-main/src/main/default/objects/Application__c/fields/BNR_FieldOfStudy_Duration_Start__c.field-meta.xml
<CustomField>
    <fullName>BNR_FieldOfStudy_Duration_Start__c</fullName>
    <label>FieldOfStudy Duration Start</label>
    <type>Date</type>
</CustomField>