salesforce-main/src/main/default/objects/Application__c/fields/BNR_Major_Within_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Major_Within_Program_Code__c</fullName>
    <description>Added for SIS Integrations.</description>
    <label>Major Within Program Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>