salesforce-main/src/main/default/objects/Application__c/fields/BNR_Outstanding_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>BNR_Outstanding_Checklist_Items__c</fullName>
    <label>Outstanding Checklist Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>