salesforce-main/src/main/default/objects/Application__c/fields/BNR_Term_Code_Entry__c.field-meta.xml
<CustomField>
    <fullName>BNR_Term_Code_Entry__c</fullName>
    <description>Added for SIS Integration.</description>
    <label>Term Code Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>