salesforce-main/src/main/default/objects/Application__c/fields/BPP_Email__c.field-meta.xml
<CustomField>
    <fullName>BPP_Email__c</fullName>
    <label>BPP Email</label>
    <type>Email</type>
</CustomField>