salesforce-main/src/main/default/objects/Application__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <label>Main City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>