salesforce-main/src/main/default/objects/Application__c/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <label>Main Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>