salesforce-main/src/main/default/objects/Application__c/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <label>Main Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>