salesforce-main/src/main/default/objects/Application__c/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <label>Main County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>