salesforce-main/src/main/default/objects/Application__c/fields/MailingStreet1__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet1__c</fullName>
    <label>MailingStreet1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>