salesforce-main/src/main/default/objects/Application__c/fields/MailingStreet2__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet2__c</fullName>
    <label>MailingStreet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>