salesforce-main/src/main/default/objects/Application__c/fields/MailingStreet3__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet3__c</fullName>
    <label>MailingStreet3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>