salesforce-main/src/main/default/objects/Application__c/fields/Previous_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Last_Name__c</fullName>
    <label>Previous Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>