salesforce-main/src/main/default/objects/Application__c/fields/Previous_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Middle_Name__c</fullName>
    <label>Previous Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>