salesforce-main/src/main/default/objects/Application__c/fields/SFDC_Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Country_of_Birth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added for SIS Integrations.</description>
    <label>Country of Birth</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Appilcations (Country of Birth)</relationshipLabel>
    <relationshipName>Appilcations1</relationshipName>
    <type>Lookup</type>
</CustomField>