salesforce-main/src/main/default/objects/Application__c/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>